# xmBase

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  NOTICE  README.md  xmbase_bench_report.json
.github/workflows/: cpp.yml  release.yml  ros.yml
bench/: CMakeLists.txt  xmbase_bench.cpp
cmake/: xmBaseConfig.cmake.in  xmSigmaConfig.cmake.in
docs/: concurrency.md  event_hub.md  logging.md
docs/design/: logging.md
docs/telemetry/: blueprint.md  comparison.md  design.md  guide.md  reference.md
examples/: CMakeLists.txt  README.md  concurrency_latest_slot_example.cpp  concurrency_message_buffer_example.cpp  concurrency_message_slot_example.cpp  concurrency_region_storage_example.cpp  concurrency_worker_inbox_example.cpp  ctrl_logger_example.cpp  custom_binding_example.cpp  device_health_example.cpp  instrumented_control_loop_example.cpp  mpsc_rt_logger_example.cpp  rt_logger_example.cpp  trace_pipeline_example.cpp  types_example.cpp  worker_pool_context_example.cpp  xlogger_example.cpp  xm_logging_example.cpp
include/xmbase/concurrency/: bounded_queue.hpp  event_count.hpp  latest_slot.hpp  message_buffer.hpp  message_slot.hpp  placement.hpp  spsc_queue.hpp  storage.hpp  waiter.hpp
include/xmbase/concurrency/detail/: seqlock_ring.hpp
include/xmbase/container/: ring_buffer.hpp  thread_safe_queue.hpp
include/xmbase/event/: async_event_dispatcher.hpp  async_event_emitter.hpp  event.hpp  event_dispatcher.hpp  event_emitter.hpp
include/xmbase/logging/: csv_logger.hpp  ctrl_logger.hpp  event_logger.hpp  rt_logger.hpp  rt_logger_mpsc.hpp  xlogger.hpp
include/xmbase/logging/details/: default_logger.hpp  logger_vendor_spdlog.hpp  logging_utils.hpp  specialized_logger.hpp
include/xmbase/math/: matrix_utils.hpp
include/xmbase/telemetry/: binding.hpp  context.hpp  csv_signal_recorder.hpp  event.hpp  handles.hpp  health.hpp  scope.hpp  span.hpp  telemetry.hpp  time.hpp
include/xmbase/testing/: alloc_probe.hpp  bench_harness.hpp
include/xmbase/types/: base_types.hpp  geometry.hpp  geometry_types.hpp  scalar.hpp  stamped.hpp  time.hpp  types.hpp
include/xmsigma/logging/: rt_logger.hpp  rt_logger_mpsc.hpp
include/xmsigma/logging/details/: logging_utils.hpp
src/: async_event_dispatcher.cpp  ctrl_logger.cpp  default_logger.cpp  event_dispatcher.cpp  logger_vendor_spdlog.cpp  rt_logger.cpp  rt_logger_mpsc.cpp  telemetry_console_binding.cpp  telemetry_csv_recorder.cpp  telemetry_logging_binding.cpp  telemetry_unbound.cpp
src/logging/: CMakeLists.txt  default_logger.hpp  logger_vendor_spdlog.hpp  logging_utils.hpp  rt_logger.hpp  rt_logger_mpsc.hpp
src/logging/examples/: CMakeLists.txt
src/logging/test/: CMakeLists.txt
test/: CMakeLists.txt  test_concurrency_bounded_queue.cpp  test_concurrency_event_count.cpp  test_concurrency_latest_slot.cpp  test_concurrency_lifecycle.cpp  test_concurrency_message_buffer.cpp  test_concurrency_message_slot.cpp  test_concurrency_placement.cpp  test_concurrency_spsc_queue.cpp  test_concurrency_storage.cpp  test_concurrency_waiter.cpp  test_csv_logger.cpp  test_ctrl_logger.cpp  test_event.cpp  test_event_logger.cpp  test_logging.cpp  test_math_utils.cpp  test_mpsc_rt_logger.cpp  test_ring_buffer.cpp  test_rt_logger.cpp  test_serialization.cpp  test_telemetry_api.cpp  test_telemetry_recorder.cpp  test_types.cpp  test_types_core.cpp  test_xlogger.cpp
